reStructuredText: add support for parsing and stringifying.
This only supports the grid table format with a header. Other
styles of tables (grid without header, and simple tables) are not
supported.

A grid table format with a header looks like:

+------------------------+------------+----------+----------+
| Header row, column 1   | Header 2   | Header 3 | Header 4 |
+========================+============+==========+==========+
| body row 1, column 1   | column 2   | column 3 | column 4 |
+------------------------+------------+----------+----------+
| body row 2             | ...        | ...      |          |
+------------------------+------------+----------+----------+

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "url": "https://github.com/rpeshkov/vscode-text-tables"
     },
     "engines": {
-        "vscode": "^1.45.0"
+        "vscode": "^1.54.0"
     },
     "categories": [
         "Formatters",
@@ -27,6 +27,7 @@
     "activationEvents": [
         "onLanguage:markdown",
         "onLanguage:org",
+        "onLanguage:restructuredtext",
         "onCommand:text-tables.enable"
     ],
     "main": "./out/src/extension",
@@ -113,6 +114,10 @@
             }
         },
         "keybindings": [
+            {
+                "command": "text-tables.createTable",
+                "key": "ctrl+q ctrl+t"
+            },
             {
                 "command": "text-tables.formatUnderCursor",
                 "key": "ctrl+q ctrl+f"
